20250826 yijiakang 【功能完善】 jvm sandbox jdk17 兼容问题处理 (20250811182456000552)